--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: target/estudoapp.war
-    destination: /tmp
+  - source: /target/estudoapp.war
+    destination: /home/ec2-user/app
 hooks:
   ApplicationStop:
-    - location: scripts/stop-process.sh
-      timeout: 200
+    - location: app_stop.sh
+      timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start-process.sh
-      timeout: 200
+    - location: Scripts/app_start.sh
+      timeout: 300
       runas: root
