--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,11 @@ version: 0.2
 
 phases:
   install:
+    commands:
+      - echo Entering install phase...
+      - wget http://mirror.olnevhost.net/pub/apache/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz
+      - tar xzvf apache-maven-3.3.9-bin.tar.gz -C /opt/
+      - export PATH=/opt/apache-maven-3.3.9/bin:$PATH
     runtime-versions:
       java: corretto11
   build:
