--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,6 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn test
       - mvn clean install
   post_build:
     commands:
@@ -22,5 +21,5 @@ artifacts:
   files:
     - target/estudoapp.war
     - appspec.yml
-    - Scripts/**/*
+    - Scripts/*
   discard-paths: yes
