--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,16 @@ phases:
   install:
     runtime-versions:
       java: corretto11
+  build:
+    commands:
+      - echo Build started on `date`
+      - mvn test
   post_build:
     commands:
       - echo Build completed on `date`
       - mvn package
-      - mv target/estudoapp.war estudoapp.war
 artifacts:
   files:
-    - estudoapp.war
+    - target/estudoapp.war
     - appspec.yml
-    - scripts/**
   discard-paths: yes
