--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,17 @@
 version: 0.0
+
 os: linux
+
 files:
-  - source: ./estudoapp.war
+  - source: /estudoapp.jar
     destination: /tmp
+
+hooks:
+  ApplicationStop:
+    - location: stop-process.sh
+      timeout: 180
+      runas: root
+  ApplicationStart:
+    - location: start-process.sh
+      timeout: 180
+      runas: root
