--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,14 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto11
   build:
     commands:
-      - echo Build started on `date`
-      - mvn test
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - mvn package
+      - mvn clean install
+
 artifacts:
   files:
-    - target/estudoapp.war
+    - target/estudoapp.jar
     - appspec.yml
+    - scripts/start-process.sh
+    - scripts/stop-process.sh
   discard-paths: yes
