--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.estudo</groupId>
 	<artifactId>estudo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>estudo</name>
 	<description>Projeto para estudo de tecnologias</description>
 	<properties>
