--- a/appspec.yml
+++ b/appspec.yml
@@ -4,14 +4,10 @@ os: linux
 
 files:
   - source: target/estudoapp.jar
-    destination: /tmp
+    destination: /var/lib/tomcat9/webapps/
 
-hooks:
-  ApplicationStop:
-    - location: scripts/stop-process.sh
-      timeout: 180
-      runas: root
-  ApplicationStart:
-    - location: scripts/start-process.sh
-      timeout: 180
-      runas: root
+permissions:
+  - object: /
+    pattern: "**"
+    owner: tomcat
+    group: tomcat
