--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: target/estudoapp.jar
+  - source: /estudoapp.war
     destination: /var/lib/tomcat9/webapps/
 
 permissions:
