Estudo AWS Pipeline

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,18 @@
 version: 0.0
-
 os: linux
-
 files:
-  - source: /estudoapp.war
-    destination: /var/lib/tomcat9/webapps/
-
-permissions:
-  - object: /
-    pattern: "**"
-    owner: tomcat
-    group: tomcat
+  - source: /
+    destination: /home/ec2-user/application
+hooks:
+  ApplicationStop:
+    - location: script_stop_server.sh
+      timeout: 180
+  Install:
+    - location: script_install.sh
+      timeout: 180
+  ApplicationStart:
+    - location: script_start_server.sh
+      timeout: 180
+  ValidateService:
+    - location: script_validate_application.sh
+      timeout: 180
