--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,14 @@ files:
     destination: /home/ec2-user/application
 hooks:
   ApplicationStop:
-    - location: script_stop_server.sh
+    - location: script/script_stop_server.sh
       timeout: 180
   Install:
-    - location: script_install.sh
+    - location: script/script_install.sh
       timeout: 180
   ApplicationStart:
-    - location: script_start_server.sh
+    - location: script/script_start_server.sh
       timeout: 180
   ValidateService:
-    - location: script_validate_application.sh
+    - location: script/script_validate_application.sh
       timeout: 180
