--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,18 +4,24 @@ phases:
   install:
     runtime-versions:
       java: corretto11
+  pre_build:
+    commands:
+      - echo "Entered the pre-build phases"
+      - echo "Frist step started"
   build:
     commands:
       - echo Build started on `date`
-      - mvn test
+      - mvn clean package
+
   post_build:
     commands:
-      - echo Build completed on `date`
-      - mvn package
+      - echo "Entered the post-build phases"
 artifacts:
   files:
     - target/*.war
-    - appspec.yml
-    - scripts/*.sh
-    - ./mvnw
+    - script/*.sh
   discard-paths: yes
+
+cache:
+  paths:
+    - '/root/.m2/**/*'
