--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,21 +4,17 @@ phases:
   install:
     runtime-versions:
       java: corretto11
-  pre_build:
-    commands:
-      - echo "Entered the pre-build phases"
-      - echo "Frist step started"
   build:
     commands:
       - echo Build started on `date`
-      - mvn clean package
-
+      - mvn test
   post_build:
     commands:
       - echo "Entered the post-build phases"
+      - mvn package
 artifacts:
   files:
-    - target/*.war
+    - target/estudoapp.war
     - script/*.sh
   discard-paths: yes
 
