--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,14 +7,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn test
-  post_build:
-    commands:
-      - echo "Entered the post-build phases"
-      - mvn package
+      - mvn clean install
 artifacts:
   files:
-    - target/estudoapp.war
+    - target/*.jar
     - script/*.sh
   discard-paths: yes
 
