Estudo AWS Pipeline

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ artifacts:
   files:
     - target/*.jar
     - script/*.sh
+    - appspec.yml
+    - buildspec.yml
   discard-paths: yes
 
 cache:
