--- a/appspec.yml
+++ b/appspec.yml
@@ -12,18 +12,18 @@ permissions:
 
 hooks:
   ApplicationStop:
-    - location: script_stop_server.sh
+    - location: script/script_stop_server.sh
       timeout: 30
       runas: ec2-user
   Install:
-    - location: script_install.sh
+    - location: script/script_install.sh
       timeout: 400
       runas: ec2-user
   ApplicationStart:
-    - location: script_start_server.sh
+    - location: script/script_start_server.sh
       timeout: 300
       runas: ec2-user
   ValidateService:
-    - location: script_validate_application.sh
+    - location: script/script_validate_application.sh
       timeout: 60
       runas: ec2-user
