--- a/appspec.yml
+++ b/appspec.yml
@@ -1,30 +1,5 @@
 version: 0.0
 os: linux
-
 files:
   - source: ./
-    destination: /home/ec2-user
-
-permissions:
-  - object: /
-    pattern: "**"
-    owner: ec2-user
-    group: ec2-user
-
-hooks:
-  ApplicationStop:
-    - location: scripts/stop_application.sh
-      timeout: 300
-      runas: ec2-user
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ec2-user
-  ApplicationStart:
-    - location: scripts/start_application.sh
-      timeout: 300
-      runas: ec2-user
-  ValidateService:
-    - location: scripts/basic_health_check.sh
-      timeout: 300
-      runas: ec2-user
+    destination: /home/ec2-user/application
