--- a/appspec.yml
+++ b/appspec.yml
@@ -4,20 +4,20 @@ files:
   - source: ./
     destination: /home/ec2-user/application
 
-#hooks:
-#  ApplicationStop:
-#    - location: scripts/stop_application.sh
-#      timeout: 300
-#      runas: root
-#  BeforeInstall:
-#    - location: scripts/before_install.sh
-#      timeout: 300
-#      runas: root
-#  ApplicationStart:
-#    - location: scripts/start_application.sh
-#      timeout: 300
-#      runas: root
-#  ValidateService:
-#    - location: scripts/basic_health_check.sh
-#      timeout: 300
-#      runas: root
+hooks:
+  ApplicationStop:
+    - location: scripts/stop_application.sh
+      timeout: 300
+      runas: root
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/start_application.sh
+      timeout: 300
+      runas: root
+  ValidateService:
+    - location: scripts/basic_health_check.sh
+      timeout: 300
+      runas: root
